[tool.poetry]
name = "hanabi-bot"
version = "0.1.0"
description = ""
authors = ["Louis Nicolle <louis.a.nicolle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websocket = "^0.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
