[tool.poetry]
name = "hanabi-bot"
version = "0.1.0"
description = ""
authors = ["Louis Nicolle <louis.a.nicolle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
requests = "^2.32.3"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
